force-app/main/default/objects/Recommendation/fields/vlocity_cmt__ContextID__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ContextID__c</fullName>
    <description>This field is used to store the Context ID for the Recommendation that was made. It is passed as an input parameter to Flow or OmniScript on accept/reject of Recommendation.</description>
    <label>Context ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>