force-app/main/default/objects/Recommendation/fields/vlocity_cmt__OfferCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OfferCode__c</fullName>
    <description>This field is used to store the Product Code corresponding to a Product in the Catalog. The NBA Strategy will surface a Product based on main features of the product compared to usage and customer spend history, this field will allow us to map the Product to the correct Recommendation.</description>
    <label>Offer Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>