force-app/main/default/objects/Recommendation/fields/vlocity_cmt__VlocityActionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__VlocityActionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vlocity Action</label>
    <referenceTo>vlocity_cmt__VlocityAction__c</referenceTo>
    <relationshipLabel>Recommendations</relationshipLabel>
    <relationshipName>Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>