force-app/main/default/objects/Recommendation/listViews/vlocity_cmt__All_Recommendations.listView-meta.xml
<ListView>
    <fullName>vlocity_cmt__All_Recommendations</fullName>
    <columns>Name</columns>
    <columns>Description</columns>
    <columns>vlocity_cmt__VlocityActionId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Recommendations</label>
</ListView>